--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,196 @@
 {
+  "header": {
+    "navbar": {
+      "companies": "Производители",
+      "products": "Каталог товаров",
+      "services": "Услуги",
+      "contactUs": "Свяжитесь с нами",
+      "addCompany": "+ Добавить свою компанию"
+    }
+  },
   "home": {
-    "title": "Privet mir!!!"
+    "hero": {
+      "title": "Международная B2B площадка для оптовой торговли",
+      "text": "Мы поможем вам найти товары произведенные напрямую от производителей",
+      "serch": "Введите название продукта",
+      "form": {
+        "title": "Подать заявку на размещение продукта на оптовом рынке. ",
+        "International": "Международный рынок",
+        "europe": "Европейский рынок",
+        "asia": "Азиатский рынок",
+        "uzbekistan": "Рынок Узбекистана",
+        "clientName": "Ваше имя",
+        "country": "Страна",
+        "phoneNumber": "Номер телефона",
+        "eAddress": "Эл. адрес",
+        "companyName": "Название компании",
+        "send": "Отправить"
+      }
+    },
+    "b2bSolution": {
+      "title": "B2B решение для вашего бизнеса",
+      "item1": {
+        "name": "Поиск",
+        "text": "Сделайте поиск и найдите продукт"
+      }, 
+      "item2": {
+        "name": "Производитель",
+        "text": "Связаться с производителями для обсуждения цен"
+      }, 
+      "item3": {
+        "name": "Договор",
+        "text": "Заключите договор с производителем"
+      } 
+    },
+    "emgu": {
+      "text": "Export Management Group of Uzbekistan — это платформа, на которой производители, поставщики и покупатели могут найти друг друга. Используйте платформу для расширения экспорта ваших компаний и привлечения зарубежных покупателей. Или найдите поставщиков и продукты по всему миру и свяжитесь с ними бесплатно."
+    },
+    "popularProducts": {
+      "title": "Последний выбор товаров",
+      "seeMore": "Посмотреть больше продуктов"
+    },
+    "productCategory": {
+      "title": "Найдите товары по категориям"
+    },
+    "productSearch": {
+      "title": "Пользуйтесь B2B чтобы найти продукт",
+      "category": "Категория продукта",
+      "subcategory": "Подкатегория продукта",
+      "name": "Введите название продукта",
+      "seemore": "Посмотреть все продукты"
+    },
+    "addCompany": {
+      "title": "Станьте поставщиком на рынке B2B, и продавайте свои продукты",
+      "text": "Международная торговля",
+      "button": "Добавить свою компанию",
+      "producers": "+1000 производителей"
+    }
+  },
+  "companies": {
+    "search": "Поиск по имени",
+    "businessCategory": "Категория бизнеса",
+    "companyLocation": "Расположение компании",
+    "applyFilter": "Применить фильтр",
+    "products": "Продукты",
+    "more": "Подробнее",
+    "nextButton": "Следующая стр.",
+    "companyInfo": {
+      "info": "Информация",
+      "products": "Товары"
+    },
+    "keyCompanyInfo": {
+      "title": "Ключевая информация о компании",
+      "businessType": "Вид бизнеса",
+      "country": "Страна",
+      "year": "Год основанния",
+      "workers": "Количество рабочих" 
+    }
+  },
+  "products": {
+    "country": "Выберите страну",
+    "category": "Категории",
+    "clearFilter": "Очистить фильтр",
+    "productInfo": {
+      "aboutProduct": "Коротко о продукте",
+      "category": "Категории",
+      "tags": "Метки",
+      "knowThePrice": {
+          "button": "Узнать оптовую цену",
+          "title": "Заполните форму запроса продукта"
+      },
+      "contact": {
+        "button": "Связаться с продавцом",
+        "title": "Связаться с продавцом",
+        "phoneNumber": "Номер телефона" 
+      },
+      "description": "Описание",
+      "comments": {
+        "title": "Отзывы",
+        "beFirst": "Будьте первым, кто оставил отзыв на",
+        "text": "Ваш адрес email не будет опубликован. Обязательные поля помечены *",
+        "mark": "Ваша оценка",
+        "comment": "Ваш отзыв",
+        "name": "Имя",
+        "email": "Email", 
+        "send": "Отправить"
+      }
+    }
+  },
+  "services": {
+    "title": "Сервисы",
+    "serviceCard1": {
+      "name": "Международный рынок",
+      "price": "18 млн сум/год",
+      "text": "Информация о вашей компании и продукции будет доступна на 7 языках – 5 самых распространенных европейских языках, а также турецком, арабском и китайском. Ваша компания будет представлена на всех основных мировых рынках. Можно разместить до 150 товаров. Ваша компания будет в топе Google SER на языке покупателя. Цена указана без НДС.",
+      "button": "Получить услугу" 
+    },
+    "serviceCard2": {
+      "name": "Европейский рынок",
+      "price": "16 млн сум/год",
+      "text": "Для тех, кто хочет сосредоточиться на отдельных рынках. Информация о вашей компании и ее продукции будет опубликована на пяти самых популярных европейских языках — английском, французском, немецком, итальянском и испанском, а также еще на одном языке по вашему выбору и может быть размещено до 100 товаров. Ваша компания будет высоко оценена в результатах поиска Google SERP на выбранных языках. Разумная цена. Цена указана без НДС.",
+      "button": "Получить услугу" 
+    },
+    "serviceCard3": {
+      "name": "Азиатский рынок",
+      "price": "12 млн. сум/год",
+      "text": "Пакет для доступа к азиатским рынкам. Информация о вашей компании и ее продукции будет доступна на четырех самых популярных азиатских языках – русском, китайском, японском, корейском и еще одном языке по выбору клиента. Список до 70 товаров. Цена указана без НДС.",
+      "button": "Получить услугу" 
+    },
+    "serviceCard4": {
+      "name": "Рынок Узбекистана",
+      "price": "Бесплатно",
+      "text": "Бесплатный пакет для доступа к рынкам Узбекистана. Информация о вашей компании и ее продукции будет доступна на 1 языке – узбекском и еще одном языке по выбору клиента. Размещение до 2-х товаров. Цена указана без НДС.",
+      "button": "Получить услугу" 
+    }
+  },
+  "contactUs": {
+    "title": "Если у вас есть какие-либо вопросы, пожалуйста, свяжитесь с нами",
+    "text": "Мы здесь, чтобы помочь вам",
+    "address": "ул Турон 2, г.Коканд, Ферганская область, Республика Узбекистан",
+    "phoneNumber": "+998 88 415 0922",
+    "email": "info@emgu.uz",
+    "form": {
+      "clientName": "Ваше имя",
+      "country": "Страна",
+      "phoneNumber": "Номер телефона",
+      "email": "Эл. адрес",
+      "product": "Продукт, который вы ищете...",
+      "send": "Отправить заявку"
+    }
+  },
+  "aboutUs": {
+    "title": "Export Management Group of Uzbekistan - Крупнейшая международная B2B площадка в городе Коканд",
+    "text": "Найдите продукцию более 1000 компаний во всех секторах B2B Республики Узбекистан. Выбирайте и бесплатно связывайтесь с лучшими поставщиками, и мы осуществляем доставку по всему миру.",
+    "contact": {
+      "title": "Мы готовы помочь вам в трудный момент",
+      "text": "Если вы ищете товары оптом, не стесняйтесь обращаться к нам для запроса продукта, мы здесь, чтобы помочь",
+      "button": "Свяжитесь с нами"
+    }
+  },
+  "howToBuy": {
+    "title": "Как купить",
+    "text": "Купить товар на EMGU очень просто.",
+    "step1": "Сначала найдите продукт, который вы хотите приобрести, используя поле поиска или категории продуктов.",
+    "step2": "На странице товара найдите кнопку «Уточнить оптовую цену» и отправьте запрос или свяжитесь напрямую с производителем по его номерам.",
+    "step3": "Если у вас все еще возникла проблема с поиском товара, свяжитесь с нами здесь: info@emgu.uz"
+  },
+  "privacyPolicy": {
+
+  },
+  "termsConditions": {
+
+  },
+  "footer": {
+    "support": {
+      "title": "Служба поддержки",
+      "howToBuy": "Как купить",
+      "privacyPolicy": "Политика конфиденциальности",
+      "termsConditions": "Правила и условия"  
+    },
+    "links": {
+      "title": "Быстрые ссылки",
+      "contactUs": "Свяжитесь с нами",
+      "aboutUs": "О компании"
+    }
   }
 }
