--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,17 +12,17 @@
     "hero": {
       "title": "Международная B2B площадка для оптовой торговли",
       "text": "Мы поможем вам найти товары произведенные напрямую от производителей",
-      "serch": "Введите название продукта",
+      "search": "Введите название продукта",
       "form": {
         "title": "Подать заявку на размещение продукта на оптовом рынке. ",
-        "International": "Международный рынок",
+        "international": "Международный рынок",
         "europe": "Европейский рынок",
         "asia": "Азиатский рынок",
         "uzbekistan": "Рынок Узбекистана",
         "clientName": "Ваше имя",
         "country": "Страна",
         "phoneNumber": "Номер телефона",
-        "eAddress": "Эл. адрес",
+        "email": "Эл. адрес",
         "companyName": "Название компании",
         "send": "Отправить"
       }
@@ -57,13 +57,14 @@
       "category": "Категория продукта",
       "subcategory": "Подкатегория продукта",
       "name": "Введите название продукта",
-      "seemore": "Посмотреть все продукты"
+      "seeMore": "Посмотреть все продукты"
     },
     "addCompany": {
       "title": "Станьте поставщиком на рынке B2B, и продавайте свои продукты",
       "text": "Международная торговля",
       "button": "Добавить свою компанию",
-      "producers": "+1000 производителей"
+      "producerCount": "+1000",
+      "producers": "производителей"
     }
   },
   "companies": {
@@ -84,12 +85,16 @@
       "country": "Страна",
       "year": "Год основанния",
       "workers": "Количество рабочих" 
-    }
+    },
+    "empty": "К сожалению, товары этого продавца не найдены.",
+    "advice": "Рекомендуем посмотреть на другие компании",
+    "recommend": "Рекомендуем"
   },
   "products": {
     "country": "Выберите страну",
     "category": "Категории",
     "clearFilter": "Очистить фильтр",
+    "empty": "Ничего не найдено",
     "productInfo": {
       "aboutProduct": "Коротко о продукте",
       "category": "Категории",
@@ -154,7 +159,8 @@
       "country": "Страна",
       "phoneNumber": "Номер телефона",
       "email": "Эл. адрес",
-      "product": "Продукт, который вы ищете...",
+      "product": "Название продукта",
+      "description": "Продукт, который вы ищете...",
       "send": "Отправить заявку"
     }
   },
