--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -491,7 +491,7 @@
       },
       "item5": {
         "name": "Contact Us",
-        "text": "If you have any questions about these Terms and Conditions, You can contact us:",
+        "text1": "If you have any questions about these Terms and Conditions, You can contact us:",
         "text2": "By visiting this page on our website: https://emgu.uz/contact-us",
         "text3": "By phone number: 998 88 415 0922"
       }
