fix companies navigate

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -75,6 +75,13 @@
     "products": "Продукты",
     "more": "Подробнее",
     "nextButton": "Следующая стр.",
+    "searchCompanies": {
+      "country": "Выберите страну",
+      "category": "Категории",
+      "clearFilter": "Очистить фильтр",
+      "searchResult": "Продукции по запросу ",
+      "noProducts": "Продуктов не нашлось"
+    },
     "companyInfo": {
       "info": "Информация",
       "products": "Товары"
@@ -83,7 +90,7 @@
       "title": "Ключевая информация о компании",
       "businessType": "Вид бизнеса",
       "country": "Страна",
-      "year": "Год основанния",
+      "year": "Год основания",
       "workers": "Количество рабочих" 
     },
     "empty": "К сожалению, товары этого продавца не найдены.",
