--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -75,6 +75,13 @@
     "products": "products",
     "more": "More",
     "nextButton": "Next page",
+    "searchCompanies": {
+      "country": "Choose a country",
+      "category": "Categories",
+      "clearFilter": "Clear filter",
+      "searchResult": "All the products for ",
+      "noProducts": "No products"
+    },
     "companyInfo": {
       "info": "Information",
       "products": "Products"
