add lang to product info

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -71,6 +71,7 @@
     "search": "Search by name",
     "businessCategory": "Business category",
     "companyLocation": "Company location",
+    "filter": "Filter",
     "applyFilter": "Apply filter",
     "products": "products",
     "more": "More",
