--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -71,6 +71,7 @@
     "search": "Поиск по имени",
     "businessCategory": "Категория бизнеса",
     "companyLocation": "Расположение компании",
+    "filter": "Фильтр",
     "applyFilter": "Применить фильтр",
     "products": "Продукты",
     "more": "Подробнее",
