--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -76,6 +76,7 @@
     "products": "Продукты",
     "more": "Подробнее",
     "nextButton": "Следующая стр.",
+    "noCompany": "Ничего не найдено",
     "searchCompanies": {
       "country": "Выберите страну",
       "category": "Категории",
