--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -76,6 +76,7 @@
     "products": "products",
     "more": "More",
     "nextButton": "Next page",
+    "noCompany": "Nothing is found",
     "searchCompanies": {
       "country": "Choose a country",
       "category": "Categories",
