--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,6 +8,10 @@
       "addCompany": "+ Добавить свою компанию"
     }
   },
+  "toast": {
+    "fill": "Все поля формы должны быть заполнены",
+    "success": "Заявка отправлена успешно"
+  },
   "home": {
     "hero": {
       "title": "Международная B2B площадка для оптовой торговли",
